--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <h1><u>Odin Recipes</u></h1>
    <ul>
-       <li><a href="./recipes/chapati.html">chapati recipe</a></li>
+       <li><a href="./recipes/chapati.html">Chapati recipe</a></li>
        <li><a href="./recipes/Ugali.html">Ugali recipe</a></li>
        <li><a href="./recipes/Nyama-Choma.html">Nyama Choma Recipe</a></li>  
    </ul>
